new configuration checking engine

--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -8,7 +8,7 @@
   provide CONFIG_ROM_SIZE=0x00200000
   provide CONFIG_RAM_ADDR=0x00300000
   provide CONFIG_RAM_SIZE=0x00200000
-  require CONFIG_ARCH_HW_INIT
+  depend CONFIG_ARCH_HW_INIT
 %config end
 
 %config CONFIG_ARCH_IBMPC_MEMORY
