--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -4,6 +4,10 @@
   parent CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=soclib
+  require CONFIG_ROM_ADDR
+  require CONFIG_ROM_SIZE
+  require CONFIG_RAM_ADDR
+  require CONFIG_RAM_SIZE
 %config end
 
 %config CONFIG_SOCLIB_EARLY_CONSOLE
