--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -5,12 +5,12 @@
 %config CONFIG_CPU_ARM_SOCLIB
   desc SoCLib ARM-v6
   parent CONFIG_CPU_ARM
-  require	CONFIG_ARCH_SOCLIB
+  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_ARM_TLS_IN_C15
   provide CONFIG_CPU_ARM_ARCH=armv6k
+  depend CONFIG_COMPILE_SOFTFLOAT
   provide CONFIG_CPU_WAIT_IRQ
-  require CONFIG_COMPILE_SOFTFLOAT
 %config end
 
 %config CONFIG_CPU_ARM_7TDMI
@@ -19,7 +19,7 @@
   provide CONFIG_CPU_ARM_CPU=arm7tdmi
   provide CONFIG_CPU_ARM_M_PROFILE
 # provide CONFIG_CPU_ARM_T_PROFILE
-  require CONFIG_COMPILE_SOFTFLOAT
+  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
 %config CONFIG_CPU_ARM_THUMB
@@ -38,49 +38,48 @@
 %config CONFIG_CPU_ARM
   desc ARM processors support
   parent CONFIG_CPU_META
-  flags nodefine
+  flags internal private
   module cpu Hexo
 
-  when CONFIG_CPU_ARM_7TDMI
   when CONFIG_CPU_ARM_SOCLIB
+  when CONFIG_CPU_ARM_7TDMI
 
   provide CONFIG_CPU_NAME=arm
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_RESET_ADDR=0x00000000
   provide CONFIG_CPU_RESET_SIZE=0x00000400
   provide CONFIG_CPU_EXCEPTION_FIXED_ADDRESS=0x0
-  single	CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI
+  single CONFIG_CPU_ARM_SOCLIB CONFIG_CPU_ARM_7TDMI
 %config end
 
 %config CONFIG_CPU_ARM_TLS_IN_C15
   desc Implement TLS with dedicated register in c0
-  flags nodefine value
+  flags internal meta
   parent CONFIG_CPU_ARM
 %config end
 
 %config CONFIG_CPU_ARM_T_PROFILE
   desc Support ARM-Thumb when compiling
-  flags nodefine value
+  flags internal meta
   parent CONFIG_CPU_ARM
 %config end
 
 %config CONFIG_CPU_ARM_M_PROFILE
   desc Microcontroller profile (ARM-7M)
-  flags nodefine value
+  flags internal meta
   parent CONFIG_CPU_ARM
   exclude CONFIG_ARCH_SMP
-  require CONFIG_DATA_FROM_ROM
 %config end
 
 %config CONFIG_CPU_ARM_ARCH
   desc ARM architecture name, like -march=
-  flags nodefine value
+  flags internal value
   parent CONFIG_CPU_ARM
 %config end
 
 %config CONFIG_CPU_ARM_CPU
   desc ARM cpu name, like -mcpu=
-  flags nodefine value
+  flags internal value
   parent CONFIG_CPU_ARM
 %config end
 
