--- a/cpu/mips/mips.config
+++ b/cpu/mips/mips.config
@@ -25,7 +25,7 @@
 %config CONFIG_CPU_MIPS_ABI_O32
   desc Mips processor abi is Old 32
   parent CONFIG_CPU_MIPS
-  default defined
+  when CONFIG_CPU_MIPS_ABI_O64! CONFIG_CPU_MIPS_ABI_N32! CONFIG_CPU_MIPS_ABI_EABI!
 %config end
 
 %config CONFIG_CPU_MIPS_ABI_O64
@@ -49,13 +49,12 @@
 %config CONFIG_CPU_MIPS
   desc MIPS processors support
   parent CONFIG_CPU_META
-  flags nodefine
+  flags internal private
   module cpu Hexo
 
   when CONFIG_CPU_MIPS32EL_SOCLIB
   when CONFIG_CPU_MIPS32EB_SOCLIB
 
-  require CONFIG_CPU_MIPS_ABI_O32 CONFIG_CPU_MIPS_ABI_O64 CONFIG_CPU_MIPS_ABI_N32 CONFIG_CPU_MIPS_ABI_EABI
   single CONFIG_CPU_MIPS_ABI_O32 CONFIG_CPU_MIPS_ABI_O64 CONFIG_CPU_MIPS_ABI_N32 CONFIG_CPU_MIPS_ABI_EABI
   require CONFIG_CPU_MIPS_VERSION
   provide CONFIG_CPU_RESET_ADDR=0xbfc00000
@@ -65,7 +64,7 @@
 
 %config CONFIG_CPU_MIPS_VERSION
   desc Mips processor version (1, 2, 3, 4, 32, 322, 64)
-  flags value nodefine
+  flags value internal private
   parent CONFIG_CPU_MIPS
 %config end
 
