--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -5,10 +5,10 @@
 %config CONFIG_CPU_PPC_SOCLIB
   desc SoCLib PowerPc 405
   parent CONFIG_CPU_PPC
-  require CONFIG_ARCH_SOCLIB
+  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_CACHE_LINE=4
-  require CONFIG_COMPILE_SOFTFLOAT
+  depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
 
@@ -18,12 +18,12 @@
 %config CONFIG_CPU_PPC
   desc PowerPC processors support
   parent CONFIG_CPU_META
-  flags nodefine
+  flags internal private
 
   when CONFIG_CPU_PPC_SOCLIB
 
   module cpu Hexo
-  require CONFIG_ARCH_SOCLIB
+  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_NAME=ppc
   provide CONFIG_CPU_RESET_ADDR=0xffffff80
   provide CONFIG_CPU_RESET_SIZE=0x80
