--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -2,7 +2,7 @@
 %config CONFIG_CPU_X86
   desc x86 processors support
   module cpu Hexo
-  require CONFIG_ARCH_IBMPC
+  depend CONFIG_ARCH_IBMPC
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86
   provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
