--- a/drivers/block/ata/block-ata.config
+++ b/drivers/block/ata/block-ata.config
@@ -2,9 +2,9 @@
 %config CONFIG_DRIVER_BLOCK_ATA
   desc enable ATA block device support
   parent CONFIG_DEVICE
-  require CONFIG_ARCH_IBMPC
+  depend CONFIG_ARCH_IBMPC
   provide CONFIG_DRIVER_BLOCK
   depend CONFIG_DRIVER_TIMER
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_HEXO_IRQ
 %config end
 
