--- a/drivers/block/soclib/block-soclib.config
+++ b/drivers/block/soclib/block-soclib.config
@@ -1,9 +1,9 @@
 
 %config CONFIG_DRIVER_BLOCK_SOCLIB
   desc enable soclib block device support
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_HEXO_IRQ
+  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_DRIVER_BLOCK
   parent CONFIG_DEVICE
-  require CONFIG_ARCH_SOCLIB
 %config end
 
