--- a/drivers/char/tty-soclib/tty-soclib.config
+++ b/drivers/char/tty-soclib/tty-soclib.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_CHAR_SOCLIBTTY
   desc enable soclib TTY device support
-  require CONFIG_ARCH_SOCLIB
+  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_DRIVER_TTY
   parent CONFIG_DEVICE
 %config end
