--- a/drivers/enum/fdt/enum-fdt.config
+++ b/drivers/enum/fdt/enum-fdt.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_ENUM_FDT
   desc Provide support for device enumeration from a Flat Device Tree
-  when CONFIG_FDT
+  flags auto
   provide CONFIG_DRIVER_ENUM
   depend CONFIG_FDT
   depend CONFIG_DEVICE_TREE
