--- a/drivers/icu/8259/icu-8259.config
+++ b/drivers/icu/8259/icu-8259.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_ICU_8259
   desc enable intel 8259 interrupt controller support
-  require CONFIG_ARCH_IBMPC
+  depend CONFIG_ARCH_IBMPC
   provide CONFIG_DRIVER_ICU
   parent CONFIG_DEVICE
 %config end
