--- a/drivers/icu/soclib-xicu/xicu.config
+++ b/drivers/icu/soclib-xicu/xicu.config
@@ -1,9 +1,9 @@
 
 %config CONFIG_DRIVER_ICU_SOCLIB_XICU
   desc enable Xicu SocLib interrupt controller unit support
-  require CONFIG_ARCH_SOCLIB
+  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_DRIVER_ICU
+  provide CONFIG_DRIVER_ICU_IPI
   parent CONFIG_DEVICE
-  suggest CONFIG_HEXO_IPI
 %config end
 
