--- a/drivers/input/8042/input-8042.config
+++ b/drivers/input/8042/input-8042.config
@@ -1,8 +1,8 @@
 
 %config CONFIG_DRIVER_INPUT_8042
   desc enable intel 8042 keyboard controller device support
-  require CONFIG_ARCH_IBMPC
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_ARCH_IBMPC
+  depend CONFIG_HEXO_IRQ
   provide CONFIG_DRIVER_INPUT
   parent CONFIG_DEVICE
 %config end
