--- a/drivers/net/ne2000/net-ne2000.config
+++ b/drivers/net/ne2000/net-ne2000.config
@@ -1,9 +1,9 @@
 
 %config CONFIG_DRIVER_NET_NE2000
   desc enable NE2000 network device support
-  require CONFIG_ARCH_IBMPC
+  depend CONFIG_ARCH_IBMPC
   depend CONFIG_NETWORK
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_HEXO_IRQ
   provide CONFIG_DRIVER_NET
   parent CONFIG_DEVICE
 %config end
