--- a/drivers/timer/emu/timer-emu.config
+++ b/drivers/timer/emu/timer-emu.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_TIMER_EMU
   desc enable timer emulation for Linux
-  require CONFIG_ARCH_EMU
+  depend CONFIG_ARCH_EMU
   provide CONFIG_DRIVER_TIMER
   parent CONFIG_DEVICE
 %config end
