--- a/drivers/timer/soclib/timer-soclib.config
+++ b/drivers/timer/soclib/timer-soclib.config
@@ -1,8 +1,8 @@
 
 %config CONFIG_DRIVER_TIMER_SOCLIB
   desc enable SocLib timer device support
-  require CONFIG_ARCH_SOCLIB
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_ARCH_SOCLIB
+  depend CONFIG_HEXO_IRQ
   provide CONFIG_DRIVER_TIMER
   parent CONFIG_DEVICE
 %config end
