--- a/gpct/gpct.config
+++ b/gpct/gpct.config
@@ -2,7 +2,6 @@
 %config CONFIG_GPCT
   desc Container library
   module gpct
-  flags mandatory root nodefine
-  default defined
+  flags mandatory
 %config end
 
