--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -1,35 +1,37 @@
 
 %config CONFIG_HEXO
   desc Hardware abstraction layer
-  flags mandatory root nodefine
+  flags mandatory
+  provide CONFIG_LICENSE_USE_LGPL
   module hexo Hexo
-  default defined
 %config end
 
 %config CONFIG_HEXO_IRQ
   desc Hardware interrupts support
-  default defined
+  flags auto
   parent CONFIG_HEXO
 %config end
 
 %config CONFIG_HEXO_IPI
   desc Inter processor interrupts support
+  flags auto
   depend CONFIG_ARCH_SMP
   depend CONFIG_CPU_WAIT_IRQ
+  depend CONFIG_DRIVER_ICU_IPI
+  suggest_when CONFIG_ARCH_SMP
   parent CONFIG_HEXO
 %config end
 
 %config CONFIG_HEXO_USERMODE
   parent CONFIG_HEXO
+  flags auto
   desc Enable processor user privilege level support
 %config end
 
 %config CONFIG_HEXO_MMU
   desc Enable MMU driver
+  flags auto
   parent CONFIG_HEXO
-  require CONFIG_HEXO_MMU_PADDR
-  require CONFIG_HEXO_MMU_VADDR
-  require CONFIG_HEXO_CPU_MMU CONFIG_HEXO_ARCH_MMU
   single CONFIG_HEXO_CPU_MMU CONFIG_HEXO_ARCH_MMU
 %config end
 
@@ -72,7 +74,7 @@
 
 %config CONFIG_HEXO_MMU_PAGESIZE
   desc Virtual memory physical page size
-  flags nodefine value
+  flags internal value
   parent CONFIG_HEXO_MMU
 %config end
 
