--- a/libc/libc.config
+++ b/libc/libc.config
@@ -1,9 +1,8 @@
 
 %config CONFIG_LIBC
   desc Standard C library
-  flags mandatory root nodefine
+  flags mandatory
   module libc C library
-  default defined
 %config end
 
 %config CONFIG_LIBC_ASSERT
@@ -15,7 +14,7 @@
 
 %config CONFIG_LIBC_SEMAPHORE
   desc libc semaphore feature enabled
-  default defined
+  flags auto
   depend CONFIG_MUTEK_SEMAPHORE
   parent CONFIG_LIBC
 %config end
@@ -45,8 +44,6 @@
   desc Enable support for stdin, stdout and stderr through tty device
   parent CONFIG_LIBC_STREAM
   depend CONFIG_MUTEK_CONSOLE
-  depend CONFIG_LIBC_STREAM
-  default defined
 %config end
 
 ######################################################################
@@ -54,7 +51,7 @@
 
 %config CONFIG_LIBC_STRING_ASM
   desc A processor specific libc string.h header is available
-  flags nodefine value
+  flags internal value
   parent CONFIG_LIBC
 %config end
 
