--- a/libcrypto/crypto.config
+++ b/libcrypto/crypto.config
@@ -1,30 +1,31 @@
 
 %config CONFIG_LIBCRYPTO
   desc Enable use of cryptographic algorithms in MutekH
-  flags root
   module libcrypto Cryptographic algorithms
-  default defined
+  flags auto
 %config end
 
 %config CONFIG_LIBCRYPTO_ARC4
   parent CONFIG_LIBCRYPTO
   desc Enable compilation of Arc4 pseudo random stream generator
+  flags auto
 %config end
 
 %config CONFIG_LIBCRYPTO_MD5
   parent CONFIG_LIBCRYPTO
   desc Enable compilation of MD5 cryptographic hash algorithm
+  flags auto
 %config end
 
 %config CONFIG_LIBCRYPTO_CRC32
   parent CONFIG_LIBCRYPTO
   desc Enable compilation of 32 bits Cyclic redundancy check
-  default defined
+  flags auto
 %config end
 
 %config CONFIG_LIBCRYPTO_CRC32_SMALL
   parent CONFIG_LIBCRYPTO_CRC32
-  when CONFIG_COMPILE_OPTIMIZE=s
-  desc Use slower algorithm but save 4Kbytes of const data
+  suggest_when CONFIG_COMPILE_OPTIMIZE=s
+  desc Use slower algorithm but save 1Kbytes of const data
 %config end
 
