--- a/libfdt/fdt.config
+++ b/libfdt/fdt.config
@@ -2,6 +2,6 @@
 %config CONFIG_FDT
   desc Provide support for Flattened-device-trees, blobs representing the
   desc architecture memory map and devices.
-  flags root
+  flags auto
   module libfdt
 %config end
