--- a/libnetwork/network.config
+++ b/libnetwork/network.config
@@ -1,7 +1,6 @@
 
 %config CONFIG_NETWORK
   desc Enable network support
-  flags root
   depend CONFIG_MUTEK_TIMERMS
   depend CONFIG_MUTEK_SCHEDULER
   depend CONFIG_MUTEK_SEMAPHORE
@@ -49,6 +48,6 @@
 %config CONFIG_NETWORK_PACKET_ASM
   desc A processor specific packet.h header is available.
   parent CONFIG_NETWORK
-  flags nodefine
+  flags internal
 %config end
 
