--- a/libtermui/termui.config
+++ b/libtermui/termui.config
@@ -1,7 +1,6 @@
 
 %config CONFIG_LIBTERMUI
   desc Enable libtermui
-  flags root
   module libtermui Terminal driver library
   provide CONFIG_LICENSE_USE_GPL
   require CONFIG_LIBTERMUI_IOHEADER
@@ -9,7 +8,7 @@
 
 %config CONFIG_LIBTERMUI_IOHEADER
   desc libtermui io operations header file name
-  flags value nodefine
+  flags value internal
   default "termio_dev_pv.h"
   parent CONFIG_LIBTERMUI
 %config end
