--- a/libvfs/fs/fat/fat.config
+++ b/libvfs/fs/fat/fat.config
@@ -2,19 +2,19 @@
 %config CONFIG_DRIVER_FS_FAT
   parent CONFIG_VFS
   desc FAT support
-  require CONFIG_DRIVER_FS_FAT16 CONFIG_DRIVER_FS_FAT32
+  depend CONFIG_DRIVER_FS_FAT16 CONFIG_DRIVER_FS_FAT32
 %config end
 
 %config CONFIG_DRIVER_FS_FAT16
-  parent CONFIG_DRIVER_FS_FAT
-  depend CONFIG_DRIVER_FS_FAT
   desc FAT16 support
+  parent CONFIG_DRIVER_FS_FAT
+  default defined
 %config end
 
 %config CONFIG_DRIVER_FS_FAT32
-  parent CONFIG_DRIVER_FS_FAT
-  depend CONFIG_DRIVER_FS_FAT
   desc FAT32 support
+  parent CONFIG_DRIVER_FS_FAT
+  default defined
 %config end
 
 %config CONFIG_DRIVER_FS_FAT_LFN
