--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -1,18 +1,9 @@
 
 %config CONFIG_MUTEK
   desc MutekH kernel core
-  default defined
   module mutek Mutek
-  flags mandatory root nodefine
-%config end
-
-%config CONFIG_MUTEK_META
-  desc	meta configuration token used to impose requirements
-  default defined
-  flags	mandatory noexport nodefine
-  require CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
-  single  CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
-  parent CONFIG_MUTEK
+  flags mandatory
+  single CONFIG_MUTEK_MEMALLOC_SIMPLE CONFIG_MUTEK_MEMALLOC_SMART CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
 %config end
 
 %config CONFIG_MUTEK_MAIN
@@ -60,7 +51,6 @@
 
 %config CONFIG_PRINTF_ARG_EXT
   desc libc printf support %S and %P extentions to dump buffers
-  default defined
   parent CONFIG_MUTEK
 %config end
 
@@ -74,6 +64,7 @@
 
 %config CONFIG_VMEM
   desc Provide virtual memory support
+  flags auto
   depend CONFIG_HEXO_MMU
   depend CONFIG_VMEM_PHYS_ALLOC
   depend CONFIG_VMEM_KERNEL_ALLOC
@@ -83,16 +74,16 @@
 
 %config CONFIG_VMEM_PHYS_ALLOC
   desc Provide physical page allocator for virtual memory
+  flags auto
   parent CONFIG_VMEM
-  default defined
 %config end
 
 %config CONFIG_VMEM_KERNEL_ALLOC
   desc Provide kernel virtual address space allocator
-  default defined
+  flags auto
   parent CONFIG_VMEM
-  require CONFIG_HEXO_MMU
-  require CONFIG_VMEM_PHYS_ALLOC
+  depend CONFIG_HEXO_MMU
+  depend CONFIG_VMEM_PHYS_ALLOC
 %config end
 
 ######################################################################
@@ -100,9 +91,8 @@
 
 %config CONFIG_MUTEK_SCHEDULER
   desc Hexo scheduler feature is enabled
-  default defined
+  flags auto
   require CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE
-  require CONFIG_MUTEK_SCHEDULER_MIGRATION CONFIG_MUTEK_SCHEDULER_STATIC
   single  CONFIG_MUTEK_SCHEDULER_MIGRATION CONFIG_MUTEK_SCHEDULER_STATIC
   parent CONFIG_MUTEK
 %config end
@@ -146,14 +136,14 @@
 
 %config CONFIG_MUTEK_RWLOCK
   depend CONFIG_MUTEK_SCHEDULER
-  when CONFIG_MUTEK_SCHEDULER
+  flags auto
   parent CONFIG_MUTEK
   desc Provide read/write locks based on hexo scheduler
 %config end
 
 %config CONFIG_MUTEK_SEMAPHORE
   depend CONFIG_MUTEK_SCHEDULER
-  when CONFIG_MUTEK_SCHEDULER
+  flags auto
   parent CONFIG_MUTEK
   desc Provide generic semaphore on hexo scheduler
 %config end
@@ -174,7 +164,6 @@
 
 %config CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
   desc Enable use of experimental memory allocation algorithm.
-  require CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
   single CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
   parent CONFIG_MUTEK
 %config end
@@ -182,7 +171,6 @@
 %config CONFIG_MUTEK_MEMALLOC_SMART
   desc Enable use of memory allocation algorithm.
   when CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL! CONFIG_MUTEK_MEMALLOC_SIMPLE!
-  require CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
   single CONFIG_MUTEK_MEMALLOC_ALGO_FIRSTFIT CONFIG_MUTEK_MEMALLOC_ALGO_BESTFIT
   parent CONFIG_MUTEK
 %config end
