--- a/scripts/global.config
+++ b/scripts/global.config
@@ -30,7 +30,8 @@
 %config CONFIG_COMPILE_OPTIMIZE
   desc Set compiler optimize switch value (0, 1, 2, 3, s)
   default 2
-  flags mandatory value root
+  range 0 1 2 3 s
+  flags value root
 %config end
 
 %config CONFIG_COMPILE_FRAMEPTR
@@ -53,6 +54,8 @@
 %config CONFIG_HET_BUILD
   flags root
   desc Heterogeneous build: The currently build kernel is part of an heterogeneous platform
+  require CONFIG_HETROM_ADDR
+  require CONFIG_HETROM_SIZE
 %config end
 
 ######################################################################
