--- a/scripts/license.config
+++ b/scripts/license.config
@@ -1,9 +1,7 @@
 
 %config CONFIG_LICENSE_META
   desc This mandatory meta token impose requirements on application license
-  default defined
-  flags nodefine mandatory root
-  require CONFIG_LICENSE_APP_GPL CONFIG_LICENSE_APP_LGPL CONFIG_LICENSE_APP_BSD CONFIG_LICENSE_APP_PUBLIC CONFIG_LICENSE_APP_PROPRIETARY
+  flags mandatory root
   single CONFIG_LICENSE_APP_GPL CONFIG_LICENSE_APP_LGPL CONFIG_LICENSE_APP_BSD CONFIG_LICENSE_APP_PUBLIC CONFIG_LICENSE_APP_PROPRIETARY
 %config end
 
@@ -12,42 +10,36 @@
 
 %config CONFIG_LICENSE_APP_GPL
   parent CONFIG_LICENSE_META
-  flags value
   desc This token must be defined if application is GPL licensed
   exclude CONFIG_LICENSE_USE_PROPRIETARY
 %config end
 
 %config CONFIG_LICENSE_APP_LGPL
   parent CONFIG_LICENSE_META
-  flags value
   desc This token must be defined if application is LGPL licensed
   exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_BSD
   parent CONFIG_LICENSE_META
-  flags value
   desc This token must be defined if application is BSD licensed
   exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_MIT
   parent CONFIG_LICENSE_META
-  flags value
   desc This token must be defined if application is MIT licensed
   exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_PUBLIC
   parent CONFIG_LICENSE_META
-  flags value
   desc This token must be defined if application is in the public domain
   exclude CONFIG_LICENSE_USE_GPL
 %config end
 
 %config CONFIG_LICENSE_APP_PROPRIETARY
   parent CONFIG_LICENSE_META
-  flags value
   desc This token must be defined if application is under a proprietary license
   exclude CONFIG_LICENSE_USE_GPL
 %config end
@@ -58,38 +50,37 @@
 %config CONFIG_LICENSE_USE_GPL
   parent CONFIG_LICENSE_META
   desc This token will be defined if using GPL licensed code in the kernel with current configuration
-  flags nodefine value
+  flags meta
   exclude CONFIG_LICENSE_USE_PROPRIETARY
 %config end
 
 %config CONFIG_LICENSE_USE_LGPL
   parent CONFIG_LICENSE_META
   desc This token will be defined if using LGPL licensed code in the kernel with current configuration
-  default defined
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_LICENSE_USE_BSD
   parent CONFIG_LICENSE_META
   desc This token will be defined if using BSD licensed code in the kernel with current configuration
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_LICENSE_USE_MIT
   parent CONFIG_LICENSE_META
   desc This token will be defined if using MIT licensed code in the kernel with current configuration
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_LICENSE_USE_PUBLIC
   parent CONFIG_LICENSE_META
   desc This token will be defined if using Public domain code in the kernel with current configuration
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_LICENSE_USE_PROPRIETARY
   parent CONFIG_LICENSE_META
   desc This token will be defined if using Public domain code in the kernel with current configuration
-  flags nodefine value
+  flags meta
 %config end
 
