--- a/arch/arch.config
+++ b/arch/arch.config
@@ -15,14 +15,11 @@
 ######################################################################
 
 %config CONFIG_ARCH_META
-  desc	meta configuration token used to impose requirements
-  default defined
-  flags	mandatory noexport nodefine root
+  desc meta configuration token used to impose requirements
+  flags	mandatory internal root
   require CONFIG_ARCH_NAME
   single CONFIG_ARCH_IBMPC CONFIG_ARCH_SOCLIB CONFIG_ARCH_EMU
-
   single CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
-  require CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
 %config end
 
 # Makefile variable
@@ -31,42 +28,36 @@
   desc RAM memory base address on this platform
   parent CONFIG_ARCH_META
   flags value
-  require CONFIG_RAM_SIZE
 %config end
 
 %config CONFIG_RAM_SIZE
   desc RAM memory size in bytes on this platform
   parent CONFIG_ARCH_META
   flags value
-  require CONFIG_RAM_ADDR
 %config end
 
 %config CONFIG_ROM_ADDR
   desc ROM memory base address on this platform
   parent CONFIG_ARCH_META
   flags value
-  require CONFIG_ROM_SIZE
 %config end
 
 %config CONFIG_ROM_SIZE
   desc ROM memory size in bytes on this platform
   parent CONFIG_ARCH_META
   flags value
-  require CONFIG_ROM_ADDR
 %config end
 
 %config CONFIG_HETROM_ADDR
   desc Heterogeneous code ROM memory base address on this platform
   parent CONFIG_ARCH_META
   flags value
-  require CONFIG_HETROM_SIZE
 %config end
 
 %config CONFIG_HETROM_SIZE
   desc Heterogeneous code ROM memory size in bytes on this platform
   parent CONFIG_ARCH_META
   flags value
-  require CONFIG_HETROM_ADDR
 %config end
 
 %config CONFIG_DATA_FROM_ROM
@@ -77,17 +68,20 @@
 
 %config CONFIG_ARCH_HW_INIT
   desc Whether arch provides a arch_hw_init() function
+  flags harddep
   parent CONFIG_ARCH_META
   when CONFIG_ARCH_HW_INIT_USER! CONFIG_ARCH_DEVICE_TREE!
 %config end
 
 %config CONFIG_ARCH_HW_INIT_USER
   desc Whether user provides a user_hw_init() function
+  flags harddep
   parent CONFIG_ARCH_META
 %config end
 
 %config CONFIG_ARCH_DEVICE_TREE
   desc Whether we use a fdt tree for devices enumeration
+  flags harddep
   parent CONFIG_ARCH_META
   depend CONFIG_DEVICE_TREE
   depend CONFIG_DRIVER_ENUM_ROOT
@@ -101,6 +95,6 @@
 %config CONFIG_ARCH_NAME
   desc	Platform name configuration token
   parent CONFIG_ARCH_META
-  flags	nodefine value
+  flags	internal value
 %config end
 
