--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -4,16 +4,10 @@
   parent CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=emu
-  require CONFIG_ARCH_HW_INIT
+  depend CONFIG_ARCH_HW_INIT
   require CONFIG_ARCH_EMU_MEMORY
   require CONFIG_ARCH_EMU_PAGESIZE
-
-  require CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
-  single  CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
-
-  require CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
-  single  CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
-
+  single CONFIG_ARCH_EMU_LINUX CONFIG_ARCH_EMU_DARWIN
   exclude CONFIG_ARCH_CLUSTER
 %config end
 
@@ -40,7 +34,7 @@
 
 %config CONFIG_ARCH_EMU_PAGESIZE
   desc Host architecture mmap page size
-  flags nodefine value
+  flags internal value
   parent CONFIG_ARCH_EMU
 %config end
 
