--- a/arch/simple/simple.config
+++ b/arch/simple/simple.config
@@ -15,7 +15,7 @@
 %config CONFIG_ARCH_SIMPLE
   desc Simple platform support
   module arch Hexo
-  flags nodefine
+  flags internal
   parent CONFIG_ARCH_META
 
   when CONFIG_ARCH_SIMPLE_SAM7
@@ -23,19 +23,19 @@
   provide CONFIG_ARCH_NAME=simple
   require CONFIG_ARCH_SIMPLE_RESET_ADDR
   exclude CONFIG_ARCH_SMP CONFIG_ARCH_CLUSTER
-  require CONFIG_DATA_FROM_ROM
-  require CONFIG_ARCH_HW_INIT
+  depend CONFIG_DATA_FROM_ROM
+  depend CONFIG_ARCH_HW_INIT
 %config end
 
 %config CONFIG_ARCH_SIMPLE_RESET_ADDR
   desc Set the reset vector address
-  flags value nodefine
+  flags value internal
   parent CONFIG_ARCH_SIMPLE
   default CONFIG_CPU_RESET_ADDR
 %config end
 
 %config CONFIG_ARCH_SIMPLE_HW_INIT
   parent CONFIG_ARCH_SIMPLE
-  flags value nodefine
+  flags value internal
   desc Whether we have an hardware-specific initialization routine
 %config end
