--- a/cpu/avr/avr.config
+++ b/cpu/avr/avr.config
@@ -21,7 +21,7 @@
 %config CONFIG_CPU_AVR
   desc AVR microcontroller support
   module cpu Hexo
-  flags nodefine
+  flags internal private
 
   when CONFIG_CPU_AVR_ATMEGA128
 
@@ -37,19 +37,19 @@
 
 %config CONFIG_CPU_AVR_IRQ_COUNT
   desc Set avr microcontroller interrupts table slot count
-  flags nodefine value
+  flags internal value
   parent CONFIG_CPU_AVR
 %config end
 
 %config CONFIG_CPU_AVR_GCCMCU
   desc Avr core instruction set version as defined in the gcc manual
-  flags nodefine value
+  flags internal value
   parent CONFIG_CPU_AVR
 %config end
 
 %config CONFIG_CPU_AVR_ENHANCED
   desc Enable use of instructions from enhanced avr core
-  flags nodefine value
+  flags internal value
   parent CONFIG_CPU_AVR
 %config end
 
