--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -36,67 +36,63 @@
 %config CONFIG_CPU_CACHE
   parent CONFIG_CPU_META
   desc Processors uses cache
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_CPU_CACHE_LINE
   parent CONFIG_CPU_META
   desc Size of a single cpu cache line in bytes
-  flags nodefine value
-  parent CONFIG_CPU_CACHE
+  flags internal value
 %config end
 
 %config CONFIG_CPU_CACHE_COHERENCY
   parent CONFIG_CPU_META
   desc Processors supports cache coherency mechanism
-  flags nodefine value
-  parent CONFIG_CPU_CACHE
-  require CONFIG_CPU_CACHE
+  flags meta
 %config end
 
 %config CONFIG_CPU_EXCEPTION_FIXED_ADDRESS
   parent CONFIG_CPU_META
   desc Processor mandatory address exception vectors
-  flags nodefine value
+  flags internal value
 %config end
 
 %config CONFIG_CPU_EXCEPTION_ALIGN
   parent CONFIG_CPU_META
   desc Processor mandatory alignment of exception vectors
-  flags nodefine value
+  flags internal value
 %config end
 
 %config CONFIG_CPU_ENDIAN_BIG
   parent CONFIG_CPU_META
   desc Processor is big endian
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_CPU_ENDIAN_LITTLE
   parent CONFIG_CPU_META
   desc Processor is little endian
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_CPU_NONALIGNED_ACCESS
   parent CONFIG_CPU_META
   desc Non-aligned memory access are supported by processor without special handling
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_CPU_WAIT_IRQ
   parent CONFIG_CPU_META
   desc The processor has a wait for interrupts instruction available
-  flags nodefine value
+  flags meta
 %config end
 
 %config CONFIG_CPU_META
   desc	meta configuration token used to impose requirements
-  flags	mandatory noexport nodefine root
-  default defined value
-  require	CONFIG_CPU_NAME
-  single	CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC
-  require CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
+  flags	mandatory internal root
+  require CONFIG_CPU_NAME
+  single CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC
+  single CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
   require CONFIG_CPU_MAXCOUNT
 %config end
 
@@ -104,7 +100,7 @@
 
 %config CONFIG_CPU_NAME
   parent CONFIG_CPU_META
-  desc	Processor type name configuration token
-  flags	nodefine value
+  desc Processor type name configuration token
+  flags	internal value
 %config end
 
