--- a/cpu/x86-64-emu/emu.config
+++ b/cpu/x86-64-emu/emu.config
@@ -2,7 +2,7 @@
 %config CONFIG_CPU_X86_64_EMU
   desc Linux Emulation processor support
   module cpu Hexo
-  require CONFIG_ARCH_EMU
+  depend CONFIG_ARCH_EMU
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_NAME=x86-64-emu
   provide CONFIG_CPU_CACHE CONFIG_CPU_CACHE_COHERENCY
