--- a/drivers/char/dbgu-sam7/dbgu-sam7.config
+++ b/drivers/char/dbgu-sam7/dbgu-sam7.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_CHAR_SAM7DBGU
   desc enable Sam7 DBGU device support
-  require CONFIG_ARCH_SIMPLE_SAM7
+  depend CONFIG_ARCH_SIMPLE_SAM7
   provide CONFIG_DRIVER_UART
   parent CONFIG_DEVICE
 %config end
