--- a/drivers/char/tty-emu/tty-emu.config
+++ b/drivers/char/tty-emu/tty-emu.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_CHAR_EMUTTY
   desc enable emulation TTY for Linux
-  require CONFIG_ARCH_EMU
+  depend CONFIG_ARCH_EMU
   provide CONFIG_DRIVER_TTY
   parent CONFIG_DEVICE
 %config end
