--- a/drivers/char/tty-vga/tty-vga.config
+++ b/drivers/char/tty-vga/tty-vga.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_CHAR_VGATTY
   desc Enable vga TTY device support
-  require CONFIG_ARCH_IBMPC
+  depend CONFIG_ARCH_IBMPC
   provide CONFIG_DRIVER_TTY
   exclude CONFIG_DRIVER_FB_VGA
   parent CONFIG_DEVICE
@@ -16,7 +16,7 @@
 %config CONFIG_DRIVER_CHAR_VGATTY_KEYBOARD
   desc Enable keyboard support. TTY will be output only if this token is disabled.
   default defined
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_HEXO_IRQ
   exclude CONFIG_DRIVER_INPUT_8042
   parent CONFIG_DRIVER_CHAR_VGATTY
 %config end
