--- a/drivers/char/uart-8250/uart-8250.config
+++ b/drivers/char/uart-8250/uart-8250.config
@@ -1,8 +1,8 @@
 
 %config CONFIG_DRIVER_CHAR_UART8250
   desc enable intel 8250 uart device support
-  require CONFIG_ARCH_IBMPC
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_ARCH_IBMPC
+  depend CONFIG_HEXO_IRQ
   provide CONFIG_DRIVER_UART
   parent CONFIG_DEVICE
 %config end
