--- a/drivers/drivers.config
+++ b/drivers/drivers.config
@@ -2,8 +2,7 @@
 %config CONFIG_DEVICE
   desc MutekH device drivers
   module drivers Device drivers
-  flags mandatory root nodefine
-  default defined
+  flags mandatory
 %config end
 
 %config CONFIG_DEVICE_TREE
@@ -14,90 +13,96 @@
 
 %config CONFIG_DRIVER_TTY
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one tty device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_UART
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one uart device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_NET
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one network device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_TIMER
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one timer device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_ICU
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one interrupt control device driver must be enabled to have it defined
+%config end
+
+%config CONFIG_DRIVER_ICU_IPI
+  parent CONFIG_DEVICE
+  flags meta
+  desc The ICU driver supports inter processor interrupts
 %config end
 
 %config CONFIG_DRIVER_FB
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one frame buffer device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_INPUT
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one input keyborad driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_SOUND
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one sound driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_BLOCK
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one block device driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_SPI
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one SPI driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_ENUM
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one ENUM driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_LCD
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one LCD driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_GPIO
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one GPIO driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_I2C
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one I2C driver must be enabled to have it defined
 %config end
 
 %config CONFIG_DRIVER_MEM
   parent CONFIG_DEVICE
-  flags nodefine value
+  flags meta
   desc At least one MEM driver must be enabled to have it defined
 %config end
