--- a/drivers/enum/isapnp/enum-isapnp.config
+++ b/drivers/enum/isapnp/enum-isapnp.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_ENUM_ISAPNP
   desc enable ISA PnP bus enumeration
-  require CONFIG_ARCH_IBMPC
+  depend CONFIG_ARCH_IBMPC
   depend CONFIG_DEVICE_TREE
   provide CONFIG_DRIVER_ENUM
   parent CONFIG_DEVICE
