--- a/drivers/enum/pci/enum-pci.config
+++ b/drivers/enum/pci/enum-pci.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_ENUM_PCI
   desc enable PCI bus enumeration
-  require CONFIG_ARCH_IBMPC
+  depend CONFIG_ARCH_IBMPC
   depend CONFIG_DEVICE_TREE
   provide CONFIG_DRIVER_ENUM
   parent CONFIG_DEVICE
