--- a/drivers/enum/root/enum-root.config
+++ b/drivers/enum/root/enum-root.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_ENUM_ROOT
   desc Enable root of device-tree enumeration
-  when CONFIG_DEVICE_TREE
+  flags auto
   depend CONFIG_DEVICE_TREE
   provide CONFIG_DRIVER_ENUM
   parent CONFIG_DEVICE
