--- a/drivers/fb/soclib/fb-soclib.config
+++ b/drivers/fb/soclib/fb-soclib.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_FB_SOCLIB
   desc enable soclib frame buffer device support
-  require CONFIG_ARCH_SOCLIB
+  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_DRIVER_FB
   parent CONFIG_DEVICE
 %config end
