--- a/drivers/fb/vga/fb-vga.config
+++ b/drivers/fb/vga/fb-vga.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_FB_VGA
   desc enable vga frame buffer device support
-  require CONFIG_ARCH_IBMPC
+  depend CONFIG_ARCH_IBMPC
   provide CONFIG_DRIVER_FB
   parent CONFIG_DEVICE
 
