--- a/drivers/gpio/sam7/gpio-sam7.config
+++ b/drivers/gpio/sam7/gpio-sam7.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_GPIO_SAM7
   desc Enable Sam7 PIO controller support
-  require CONFIG_ARCH_SIMPLE_SAM7
+  depend CONFIG_ARCH_SIMPLE_SAM7
   provide CONFIG_DRIVER_GPIO
   parent CONFIG_DEVICE
 %config end
