--- a/drivers/icu/soclib-icu/icu-soclib.config
+++ b/drivers/icu/soclib-icu/icu-soclib.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_ICU_SOCLIB
   desc enable SocLib interrupt controller unit support
-  require CONFIG_ARCH_SOCLIB
+  depend CONFIG_ARCH_SOCLIB
   provide CONFIG_DRIVER_ICU
   parent CONFIG_DEVICE
 %config end
