--- a/drivers/timer/8253/timer-8253.config
+++ b/drivers/timer/8253/timer-8253.config
@@ -1,8 +1,8 @@
 
 %config CONFIG_DRIVER_TIMER_8253
   desc enable intel 8253 timer device support
-  require CONFIG_ARCH_IBMPC
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_ARCH_IBMPC
+  depend CONFIG_HEXO_IRQ
   provide CONFIG_DRIVER_TIMER
   parent CONFIG_DEVICE
 %config end
