--- a/drivers/timer/pitc_6079a/pitc_6079a.config
+++ b/drivers/timer/pitc_6079a/pitc_6079a.config
@@ -1,7 +1,7 @@
 
 %config CONFIG_DRIVER_TIMER_PITC_6079A
   desc Enable Atmen PITC 6079A timer device support (Sam7, ...)
-  depend CONFIG_DRIVER_ICU
+  depend CONFIG_HEXO_IRQ
   provide CONFIG_DRIVER_TIMER
   parent CONFIG_DEVICE
 %config end
