--- a/libmwmr/mwmr.config
+++ b/libmwmr/mwmr.config
@@ -1,9 +1,7 @@
 
 %config CONFIG_MWMR
-  flags root
   desc Mwmr middleware support
   module libmwmr
-  require CONFIG_MWMR_SOCLIB CONFIG_MWMR_PTHREAD
   single CONFIG_MWMR_SOCLIB CONFIG_MWMR_PTHREAD
 %config end
 
@@ -23,18 +21,18 @@
 %config CONFIG_MWMR_INSTRUMENTATION
   desc Mwmr timing observation, only under SRL
   parent CONFIG_MWMR
-  require CONFIG_MWMR_SOCLIB
-  require CONFIG_SRL
+  depend CONFIG_MWMR_SOCLIB
+  depend CONFIG_SRL
 %config end
 
 %config CONFIG_MWMR_USE_RAMLOCKS
   desc Mwmr is ramlocks based, only under SRL, does not change platform s lock backend
   parent CONFIG_MWMR
-  require CONFIG_SRL
+  depend CONFIG_SRL
 %config end
 
 %config CONFIG_MWMR_LOCKFREE
   desc Mwmr is completely using atomic operations, only under SRL, does not change platform s lock backend
   parent CONFIG_MWMR_SOCLIB
-  require CONFIG_SRL
+  depend CONFIG_SRL
 %config end
