add CONFIG_*_SMP_CAPABLE tokens

--- a/arch/arch.config
+++ b/arch/arch.config
@@ -1,6 +1,8 @@
 
 %config CONFIG_ARCH_SMP
   desc Support multi-processors systems
+  depend CONFIG_CPU_SMP_CAPABLE
+  depend CONFIG_ARCH_SMP_CAPABLE
   parent CONFIG_ARCH_META
   when CONFIG_CPU_MAXCOUNT>1
   suggest CONFIG_CPU_MAXCOUNT>1
@@ -22,7 +24,11 @@
   single CONFIG_ARCH_DEVICE_TREE CONFIG_ARCH_HW_INIT CONFIG_ARCH_HW_INIT_USER
 %config end
 
-# Makefile variable
+%config CONFIG_ARCH_SMP_CAPABLE
+  parent CONFIG_CPU_META
+  desc Platform is designed to support multi-processor operation
+  flags meta
+%config end
 
 %config CONFIG_RAM_ADDR
   desc RAM memory base address on this platform
