--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -11,8 +11,17 @@
   depend CONFIG_ARCH_HW_INIT
 %config end
 
+%config CONFIG_ARCH_IBMPC_SMP
+  flags internal
+  parent CONFIG_ARCH_IBMPC
+  when CONFIG_ARCH_SMP
+  depend CONFIG_DRIVER_ICU_APIC
+  provide CONFIG_ARCH_SMP_CAPABLE
+%config end
+
 %config CONFIG_ARCH_IBMPC_MEMORY
   desc Set the amount of ram memory. Ram size will be autodetected if this token is diabled.
+  flags value
   parent CONFIG_ARCH_IBMPC
 %config end
 
