--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -4,6 +4,7 @@
   parent CONFIG_ARCH_META
   module arch Hexo
   provide CONFIG_ARCH_NAME=soclib
+  provide CONFIG_ARCH_SMP_CAPABLE
   require CONFIG_ROM_ADDR
   require CONFIG_ROM_SIZE
   require CONFIG_RAM_ADDR
