--- a/cpu/arm/arm.config
+++ b/cpu/arm/arm.config
@@ -10,6 +10,7 @@
   provide CONFIG_CPU_ARM_TLS_IN_C15
   provide CONFIG_CPU_ARM_ARCH=armv6k
   depend CONFIG_COMPILE_SOFTFLOAT
+  provide CONFIG_CPU_SMP_CAPABLE
   provide CONFIG_CPU_WAIT_IRQ
 %config end
 
@@ -68,7 +69,6 @@
   desc Microcontroller profile (ARM-7M)
   flags internal meta
   parent CONFIG_CPU_ARM
-  exclude CONFIG_ARCH_SMP
 %config end
 
 %config CONFIG_CPU_ARM_ARCH
