--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -33,6 +33,12 @@
 ######################################################################
 # Provided token, not definable by user directly
 
+%config CONFIG_CPU_SMP_CAPABLE
+  parent CONFIG_CPU_META
+  desc Processor instruction set and other features allow use in multiprocessors systems
+  flags meta
+%config end
+
 %config CONFIG_CPU_CACHE
   parent CONFIG_CPU_META
   desc Processors uses cache
