--- a/cpu/ppc/ppc.config
+++ b/cpu/ppc/ppc.config
@@ -8,6 +8,7 @@
   depend CONFIG_ARCH_SOCLIB
   provide CONFIG_CPU_CACHE
   provide CONFIG_CPU_CACHE_LINE=4
+  provide CONFIG_CPU_SMP_CAPABLE
   depend CONFIG_COMPILE_SOFTFLOAT
 %config end
 
