--- a/cpu/x86-64-emu/emu.config
+++ b/cpu/x86-64-emu/emu.config
@@ -9,6 +9,7 @@
   provide CONFIG_CPU_ENDIAN_LITTLE
   provide CONFIG_CPU_NONALIGNED_ACCESS
   provide CONFIG_ARCH_EMU_PAGESIZE=4096
+  provide CONFIG_CPU_SMP_CAPABLE
   parent CONFIG_CPU_META
 %config end
 
