--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -21,11 +21,11 @@
 %config CONFIG_ARCH_EMU_DARWIN
   desc Target system is Darwin (MacOS X)
   parent CONFIG_ARCH_EMU
-  exclude CONFIG_ARCH_SMP
 %config end
 
 %config CONFIG_ARCH_EMU_LINUX
   desc Target system is Linux
+  provide CONFIG_ARCH_SMP_CAPABLE
   parent CONFIG_ARCH_EMU
 %config end
 
