--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -13,6 +13,7 @@
   provide CONFIG_HEXO_MMU_PAGESIZE=4096
   provide CONFIG_CPU_NONALIGNED_ACCESS
   provide CONFIG_CPU_WAIT_IRQ
+  provide CONFIG_CPU_SMP_CAPABLE
   parent CONFIG_CPU_META
 %config end
 
