add missing deps in libvfs config

--- a/libvfs/vfs.config
+++ b/libvfs/vfs.config
@@ -3,6 +3,7 @@
   desc Enable virtual file system support
   module libvfs Virtual File System
   require CONFIG_VFS_NAMELEN
+  depend CONFIG_MUTEK_SEMAPHORE
 %config end
 
 %config CONFIG_VFS_NAMELEN
