update icu device class API

--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -12,10 +12,11 @@
 %config end
 
 %config CONFIG_ARCH_IBMPC_SMP
+  desc IBM PC platform with multiprocessor support
   flags internal
   parent CONFIG_ARCH_IBMPC
   when CONFIG_ARCH_SMP
-  depend CONFIG_DRIVER_ICU_APIC
+#  depend CONFIG_DRIVER_ICU_APIC
   provide CONFIG_ARCH_SMP_CAPABLE
 %config end
 
