added early console support for ibmpc/vga, added CONFIG_MUTEK_PRINTK_KEEP_EARLY

--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -20,6 +20,12 @@
   provide CONFIG_ARCH_SMP_CAPABLE
 %config end
 
+%config CONFIG_IBMPC_EARLY_CONSOLE_VGA
+  desc enable early vga text console before device initialization
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+  parent CONFIG_ARCH_IBMPC
+%config end
+
 %config CONFIG_ARCH_IBMPC_MEMORY
   desc Set the amount of ram memory. Ram size will be autodetected if this token is diabled.
   flags value
