--- a/arch/soclib/soclib.config
+++ b/arch/soclib/soclib.config
@@ -12,10 +12,16 @@
 %config end
 
 %config CONFIG_SOCLIB_EARLY_CONSOLE
-  desc SoCLib console output on a TTY at fixed address
-  desc before device initialization
-  flags value
+  desc enable SoCLib early console TTY before device initialization
+  provide CONFIG_MUTEK_EARLY_CONSOLE
   parent CONFIG_ARCH_SOCLIB
+  require CONFIG_SOCLIB_EARLY_CONSOLE_ADDR
+%config end
+
+%config CONFIG_SOCLIB_EARLY_CONSOLE_ADDR
+  desc SoCLib early console TTY address
+  parent CONFIG_SOCLIB_EARLY_CONSOLE
+  flags value
 %config end
 
 %config CONFIG_ARCH_SOCLIB_VCACHE_32
