--- a/examples/common/platforms-soclib.conf
+++ b/examples/common/platforms-soclib.conf
@@ -69,7 +69,8 @@
     CONFIG_ROM_ADDR 0x60000000
     CONFIG_ROM_SIZE 0x00100000
   
-    CONFIG_SOCLIB_EARLY_CONSOLE 0xd0200000
+    CONFIG_SOCLIB_EARLY_CONSOLE
+    CONFIG_SOCLIB_EARLY_CONSOLE_ADDR 0xd0200000
     %append MODULES pf_def:$(CONFIGPATH)
     %set platform_name pf_soclib_tutorial
 
