--- a/examples/common/platforms-ibmpc.conf
+++ b/examples/common/platforms-ibmpc.conf
@@ -8,7 +8,8 @@
   CONFIG_CPU_MAXCOUNT 8
 
   CONFIG_ARCH_HW_INIT
-
+  CONFIG_IBMPC_EARLY_CONSOLE_VGA
+  CONFIG_MUTEK_PRINTK_KEEP_EARLY
   CONFIG_DRIVER_CHAR_VGATTY
   CONFIG_DRIVER_ICU_8259
   CONFIG_COMPILE_SOFTFLOAT undefined
