--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -20,6 +20,12 @@
   parent CONFIG_MUTEK
 %config end
 
+%config CONFIG_MUTEK_EARLY_CONSOLE
+  desc Indicate early primitive text console is used at startup
+  parent CONFIG_MUTEK
+  flags meta
+%config end
+
 %config CONFIG_MUTEK_TIMERMS
   desc Provide a general purpose milliseconds timer object
   when CONFIG_DRIVER_TIMER
@@ -42,6 +48,12 @@
   desc Provide printk() for kernel messages
   default defined
   parent CONFIG_MUTEK
+%config end
+
+%config CONFIG_MUTEK_PRINTK_KEEP_EARLY
+  desc Instruct to keep using early console for printk once a legacy console driver is available
+  parent CONFIG_MUTEK_PRINTK
+  depend CONFIG_MUTEK_EARLY_CONSOLE
 %config end
 
 %config CONFIG_PRINTF_ARG_SIMPLE
