fix some libcapsule deps

--- a/examples/capsule/config
+++ b/examples/capsule/config
@@ -7,6 +7,8 @@
   # Application license
   CONFIG_LICENSE_APP_LGPL
 
+  CONFIG_LIBC_STREAM
+  CONFIG_LIBC_STREAM_STD
   CONFIG_MUTEK_SCHEDULER_STATIC
   # Libs
   CONFIG_CAPSULE
