--- a/libcapsule/capsule.config
+++ b/libcapsule/capsule.config
@@ -5,4 +5,5 @@
   module libcapsule
   depend CONFIG_MUTEK_SCHEDULER
   depend CONFIG_MUTEK_SCHEDULER_STATIC
+  depend CONFIG_MUTEK_SEMAPHORE
 %config end
