added experimental x86 apic driver with IPIs support

--- a/arch/ibmpc/ibmpc.config
+++ b/arch/ibmpc/ibmpc.config
@@ -16,7 +16,7 @@
   flags internal
   parent CONFIG_ARCH_IBMPC
   when CONFIG_ARCH_SMP
-#  depend CONFIG_DRIVER_ICU_APIC
+  depend CONFIG_DRIVER_ICU_APIC
   provide CONFIG_ARCH_SMP_CAPABLE
 %config end
 
