--- a/cpu/x86/Makefile
+++ b/cpu/x86/Makefile
@@ -1,9 +1,9 @@
 
 objs =											\
-interrupts.o										\
 boot.o											\
 cpu_init.o										\
-cpu_context.o
+cpu_context.o                                                                           \
+interrupts.o
 
 ifeq ($(CONFIG_HEXO_MMU), defined)
 objs += mmu.o
