--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -29,3 +29,11 @@
   default defined
 %config end
 
+%config CONFIG_CPU_X86_SMP_BOOT_ADDR
+  parent CONFIG_CPU_X86
+  desc app CPUs boot address for x86 SMP bootup sequence.
+  desc Must be 4k aligned, below 1Mb limit.
+  flags value internal
+  default 0x00002000
+%config end
+
