--- a/drivers/icu/Makefile
+++ b/drivers/icu/Makefile
@@ -3,6 +3,10 @@ ifeq ($(CONFIG_DRIVER_ICU_8259), defined)
  subdirs += 8259
 endif
 
+ifeq ($(CONFIG_DRIVER_ICU_APIC), defined)
+ subdirs += apic
+endif
+
 ifeq ($(CONFIG_DRIVER_ICU_SOCLIB), defined)
  subdirs += soclib-icu
 endif
