--- a/hexo/hexo.config
+++ b/hexo/hexo.config
@@ -18,6 +18,7 @@
   depend CONFIG_ARCH_SMP
   depend CONFIG_CPU_WAIT_IRQ
   depend CONFIG_DRIVER_ICU_IPI
+  depend CONFIG_HEXO_IRQ
   suggest_when CONFIG_ARCH_SMP
   parent CONFIG_HEXO
 %config end
