--- a/examples/mjpeg_het/config
+++ b/examples/mjpeg_het/config
@@ -13,8 +13,10 @@
 # Libs
   CONFIG_PTHREAD
   CONFIG_HEXO_INTTYPES_DEPRECATED undefined
-  CONFIG_LIBC_STREAM_STD undefined
 
 %include ../common/build_options.conf
-%include ../common/platforms-soclib.conf
+%include ../common/platforms.conf
+
+%section static
+  CONFIG_MUTEK_SCHEDULER_STATIC
 
