added scheduler sched_tmp_stack function

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -141,6 +141,14 @@
   default 2048
 %config end
 
+%config CONFIG_MUTEK_SCHEDULER_TMP_STACK_SIZE
+  desc Size of the temporary stack allocated for context exit/destroy
+  desc Stack size is specified in stack bytes count.
+  flags value
+  parent CONFIG_MUTEK_SCHEDULER
+  default 128
+%config end
+
 %config CONFIG_MUTEK_SCHEDULER_CANDIDATE_FCN
   desc Enables sched_context_candidate_fcn(), uses an external function to check if a running thread must be selected
   parent CONFIG_MUTEK_SCHEDULER
