--- a/libunix/unix.config
+++ b/libunix/unix.config
@@ -2,11 +2,14 @@
 %config CONFIG_UNIX
   desc Enable UNIX support
   module libunix Unix OS library
-  require CONFIG_PTHREAD_STACK_SIZE
   depend CONFIG_MUTEK_SCHEDULER
   depend CONFIG_HEXO_MMU
+  depend CONFIG_VFS
+
   require CONFIG_UNIX_STACK_VADDR
-  require CONFIG_UNIX_START_VADDR
+  require CONFIG_UNIX_PROC_START_VADDR
+  require CONFIG_UNIX_KSTACK_SIZE
+  require CONFIG_LIBUNIX_MAX_FD
 %config end
 
 %config CONFIG_UNIX_STACK_VADDR
@@ -16,7 +19,7 @@
   default 0x80000000
 %config end
 
-%config CONFIG_UNIX_START_VADDR
+%config CONFIG_UNIX_PROC_START_VADDR
   parent CONFIG_UNIX
   flags value
   desc Set unix process user start address
@@ -30,7 +33,10 @@
   default 4096
 %config end
 
-%config CONFIG_UNIX_DEBUG
+%config CONFIG_LIBUNIX_MAX_FD
   parent CONFIG_UNIX
-  desc Set a debugging flag
+  flags value
+  desc Set unix process max open fds
+  default 32
 %config end
+
