--- a/cpu/x86/Makefile
+++ b/cpu/x86/Makefile
@@ -9,6 +9,19 @@ ifeq ($(CONFIG_HEXO_MMU), defined)
 objs += mmu.o
 endif
 
-subdirs = libc libnetwork libelf
+subdirs = libc
+
+ifeq ($(CONFIG_LIBELF), defined)
+subdirs += libelf
+endif
+
+ifeq ($(CONFIG_NETWORK), defined)
+subdirs += libnetwork
+endif
+
+ifeq ($(CONFIG_LIBUNIX), defined)
+subdirs += libunix
+endif
 
 copy = ldscript
+
