Add early console to emu

--- a/examples/common/platforms-emu.conf
+++ b/examples/common/platforms-emu.conf
@@ -7,6 +7,8 @@
   CONFIG_ARCH_EMU
 
   CONFIG_ARCH_HW_INIT
+  CONFIG_EMU_EARLY_CONSOLE
+  CONFIG_MUTEK_PRINTK_KEEP_EARLY
   CONFIG_DRIVER_CHAR_EMUTTY
   CONFIG_CPU_RESET_HANDLER undefined
   CONFIG_COMPILE_SOFTFLOAT undefined
