--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -29,6 +29,12 @@
   parent CONFIG_ARCH_EMU
 %config end
 
+%config CONFIG_EMU_EARLY_CONSOLE
+  desc enable early text console before device initialization
+  provide CONFIG_MUTEK_EARLY_CONSOLE
+  parent CONFIG_ARCH_EMU
+%config end
+
 ######################################################################
 # Provided token, not definable by user directly
 
