experimental irq support for arch/emu

--- a/arch/emu/Makefile
+++ b/arch/emu/Makefile
@@ -8,6 +8,10 @@ ifeq ($(CONFIG_ARCH_EMU_DARWIN),defined)
 objs += darwin_before.o darwin_after.o
 endif
 
+ifeq ($(CONFIG_HEXO_IRQ),defined)
+objs += interrupts.o
+endif
+
 subdirs = include/arch/hexo
 
 ifeq ($(LINKING),1)
