--- a/cpu/x86/x86.config
+++ b/cpu/x86/x86.config
@@ -18,7 +18,7 @@
 %config end
 
 %config CONFIG_CPU_X86_ALIGNCHECK
-  parent CONFIG_CPU_X86
+  parent CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU
   desc Enable memory access alignement checking on x86 processors
   default defined
 %config end
