--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -21,6 +21,7 @@
 %config CONFIG_ARCH_EMU_DARWIN
   desc Target system is Darwin (MacOS X)
   parent CONFIG_ARCH_EMU
+  exclude CONFIG_HEXO_IRQ
 %config end
 
 %config CONFIG_ARCH_EMU_LINUX
