--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -3,13 +3,12 @@
   desc Enable POSIX thread support
   require CONFIG_PTHREAD_STACK_SIZE
   depend CONFIG_MUTEK_SCHEDULER
-  depend CONFIG_MUTEK_RWLOCK
   module libpthread Pthread library
 %config end
 
 %config CONFIG_PTHREAD_STACK_SIZE
   desc Size of the stack allocated for each pthread. Stack size is specified in stack bytes count.
-  flags value
+  flags value maxval
   parent CONFIG_PTHREAD
   default 4096
 %config end
@@ -20,21 +19,52 @@
   parent CONFIG_PTHREAD
 %config end
 
+%config CONFIG_PTHREAD_RWLOCK
+  flags auto
+  desc Enable pthread_rwlock_* primitives
+  parent CONFIG_PTHREAD
+  depend CONFIG_MUTEK_RWLOCK
+%config end
+
+%config CONFIG_PTHREAD_SPIN
+  flags auto
+  desc Enable pthread_spin_* primitives
+  parent CONFIG_PTHREAD
+%config end
+
+%config CONFIG_PTHREAD_COND
+  desc Enable pthread_cond_* primitives
+  parent CONFIG_PTHREAD
+  default defined
+%config end
+
+%config CONFIG_PTHREAD_BARRIER
+  desc Enable pthread_barrier_* primitives
+  parent CONFIG_PTHREAD
+  default defined
+%config end
+
 %config CONFIG_PTHREAD_CANCEL
-  desc Provide pthread_cancel support
+  desc Enable pthread_cancel support
   parent CONFIG_PTHREAD
   default defined
 %config end
 
 %config CONFIG_PTHREAD_JOIN
-  desc Provide joinable pthread support
+  desc Enable joinable pthread support
+  parent CONFIG_PTHREAD
+  default defined
+%config end
+
+%config CONFIG_PTHREAD_MUTEX
+  desc Enable pthread_mutex_* primitives
   parent CONFIG_PTHREAD
   default defined
 %config end
 
 %config CONFIG_PTHREAD_MUTEX_ATTR
   desc Provide pthread mutex attributes support
-  parent CONFIG_PTHREAD
+  parent CONFIG_PTHREAD_MUTEX
   default defined
 %config end
 
