--- a/cpu/cpu.config
+++ b/cpu/cpu.config
@@ -99,7 +99,7 @@
   require CONFIG_CPU_NAME
   single CONFIG_CPU_X86 CONFIG_CPU_X86_EMU CONFIG_CPU_X86_64_EMU CONFIG_CPU_MIPS CONFIG_CPU_AVR CONFIG_CPU_ARM CONFIG_CPU_PPC
   single CONFIG_CPU_ENDIAN_BIG CONFIG_CPU_ENDIAN_LITTLE
-  require CONFIG_CPU_MAXCOUNT
+  require CONFIG_CPU_MAXCOUNT>0
 %config end
 
 # Makefile variable
