--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -36,6 +36,15 @@
   parent CONFIG_ARCH_EMU
 %config end
 
+%config CONFIG_ARCH_EMU_UNLOCK_YIELD
+  desc Call host operating system scheduler yield after spin lock release.
+  desc This must be defined when emulating more emu processors than
+  desc physical processors available on the host machine. This avoids
+  desc spending much time spinning during _many_ host process time slices.
+  parent CONFIG_ARCH_EMU
+  suggest_when CONFIG_ARCH_SMP CONFIG_ARCH_SMP_CAPABLE
+%config end
+
 ######################################################################
 # Provided token, not definable by user directly
 
