--- a/examples/common/platforms-emu.conf
+++ b/examples/common/platforms-emu.conf
@@ -15,6 +15,7 @@
 
   %subsection emusmp
     CONFIG_CPU_MAXCOUNT 4
+    CONFIG_ARCH_EMU_UNLOCK_YIELD
   %end
 
   #################################################
