added CONFIG_ARCH_EMU_TRAP_KILL feature

--- a/arch/emu/emu.config
+++ b/arch/emu/emu.config
@@ -45,6 +45,11 @@
   suggest_when CONFIG_ARCH_SMP CONFIG_ARCH_SMP_CAPABLE
 %config end
 
+%config CONFIG_ARCH_EMU_TRAP_KILL
+  parent CONFIG_ARCH_EMU
+  desc A cpu_trap() call will kill all processes instead of using a trap instruction
+%config end
+
 ######################################################################
 # Provided token, not definable by user directly
 
