increased scheduler tmp stack size

--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -105,6 +105,7 @@
   desc Hexo scheduler feature is enabled
   flags auto
   require CONFIG_MUTEK_SCHEDULER_IDLE_STACK_SIZE
+  require CONFIG_MUTEK_SCHEDULER_TMP_STACK_SIZE
   single  CONFIG_MUTEK_SCHEDULER_MIGRATION CONFIG_MUTEK_SCHEDULER_STATIC
   parent CONFIG_MUTEK
 %config end
@@ -146,7 +147,7 @@
   desc Stack size is specified in stack bytes count.
   flags value
   parent CONFIG_MUTEK_SCHEDULER
-  default 128
+  default 256
 %config end
 
 %config CONFIG_MUTEK_SCHEDULER_CANDIDATE_FCN
