in depth libpthread cleanup

--- a/libpthread/Makefile
+++ b/libpthread/Makefile
@@ -9,8 +9,16 @@ ifeq ($(CONFIG_PTHREAD_COND), defined)
 objs += cond.o
 endif
 
+ifeq ($(CONFIG_PTHREAD_CANCEL), defined)
+objs += cancel.o
+endif
+
 ifeq ($(CONFIG_PTHREAD_BARRIER), defined)
 objs += barrier.o
+endif
+
+ifeq ($(CONFIG_PTHREAD_MAIN), defined)
+objs += main_wrap.o
 endif
 
 doc_headers = \
