--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -13,6 +13,11 @@
   default 4096
 %config end
 
+%config CONFIG_PTHREAD_MAIN
+  desc Provide a standard main(argc, argv) function with a pthread context, defines app_start();
+  parent CONFIG_PTHREAD
+%config end
+
 %config CONFIG_PTHREAD_CHECK
   desc Enable extensive error checking for pthread API
   when CONFIG_DEBUG
