--- a/libc/libc.config
+++ b/libc/libc.config
@@ -46,6 +46,23 @@
   depend CONFIG_MUTEK_CONSOLE
 %config end
 
+%config CONFIG_LIBC_FORMATTER_PRINTF
+  parent CONFIG_LIBC
+  flags mandatory
+  desc Printf string formater algorithm
+%config end
+
+%config CONFIG_LIBC_FORMATTER_SIMPLE
+  parent CONFIG_LIBC
+  desc Reduce formater algorithm features to bare minimum
+%config end
+
+%config CONFIG_LIBC_FORMATTER_HEXDUMP
+  parent CONFIG_LIBC
+  flags auto
+  desc Enable smart hexadecimal dump formater algorithm
+%config end
+
 ######################################################################
 # Provided tokens, not definable by user directly
 
