--- a/mutek/mutek.config
+++ b/mutek/mutek.config
@@ -48,22 +48,25 @@
   desc Provide printk() for kernel messages
   default defined
   parent CONFIG_MUTEK
+  depend CONFIG_LIBC_FORMATTER_PRINTF
+%config end
+
+%config CONFIG_MUTEK_PRINTK_HEXDUMP
+  desc Provide hexdumpk() for kernel diagnostic
+  parent CONFIG_MUTEK_PRINTK
+  depend CONFIG_LIBC_FORMATTER_HEXDUMP
+%config end
+
+%config CONFIG_MUTEK_PRINTK_LOCK
+  desc Use spinlock to protect printk() calls and avoid output mess.
+  desc May change code behavior and hide potential issues.
+  parent CONFIG_MUTEK_PRINTK
 %config end
 
 %config CONFIG_MUTEK_PRINTK_KEEP_EARLY
   desc Instruct to keep using early console for printk once a legacy console driver is available
   parent CONFIG_MUTEK_PRINTK
   depend CONFIG_MUTEK_EARLY_CONSOLE
-%config end
-
-%config CONFIG_PRINTF_ARG_SIMPLE
-  desc libc printf() features are reduced
-  parent CONFIG_MUTEK
-%config end
-
-%config CONFIG_PRINTF_ARG_EXT
-  desc libc printf support %S and %P extentions to dump buffers
-  parent CONFIG_MUTEK
 %config end
 
 %config CONFIG_MUTEK_SMP_APP_START
