added/updated some pthread thread attributes

--- a/libpthread/pthread.config
+++ b/libpthread/pthread.config
@@ -1,6 +1,7 @@
 
 %config CONFIG_PTHREAD
   desc Enable POSIX thread support
+  flags auto
   require CONFIG_PTHREAD_STACK_SIZE
   depend CONFIG_MUTEK_SCHEDULER
   module libpthread Pthread library
