Fix experimental memory allocator

--- a/examples/malloc_stress/config
+++ b/examples/malloc_stress/config
@@ -9,28 +9,33 @@
 
 %section alloc-simple
   %types stressed_allocator
+  %set OUTPUT_NAME $(OUTPUT_NAME)_simple
   CONFIG_MUTEK_MEMALLOC_SIMPLE
 
 %section alloc-smart
   %types stressed_allocator
+  %set OUTPUT_NAME $(OUTPUT_NAME)_smart
   CONFIG_MUTEK_MEMALLOC_SMART
 
 %section alloc-exp
   %types stressed_allocator
+  %set OUTPUT_NAME $(OUTPUT_NAME)_exp
   CONFIG_MUTEK_MEMALLOC_EXPERIMENTAL
 
 %section mem-guard
-  %types debug_tool
+  %set OUTPUT_NAME $(OUTPUT_NAME)_guard
   CONFIG_MUTEK_MEMALLOC_GUARD
 
 %section mem-crc
-  %types debug_tool
+  %set OUTPUT_NAME $(OUTPUT_NAME)_crc
   CONFIG_MUTEK_MEMALLOC_CRC
 
 %section mem-scramble
-  %types debug_tool
+  %set OUTPUT_NAME $(OUTPUT_NAME)_scramble
   CONFIG_MUTEK_MEMALLOC_SCRAMBLE
 
+%section mem-scramble-init
+  CONFIG_MUTEK_MEMALLOC_SCRAMBLE_INIT
 
 %common
   %requiretypes stressed_allocator
@@ -42,4 +47,3 @@
 
 %include ../common/build_options.conf
 %include ../common/platforms.conf
-
