added printf float support

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -18,6 +18,10 @@ ifeq ($(CONFIG_LIBC_STREAM), defined)
 objs += stdio.o
 endif
 
+ifeq ($(CONFIG_LIBC_FORMATTER_FLOAT), defined)
+objs += formatter_float.o
+endif
+
 doc_headers = \
 	sys/stat.h ctype.h unistd.h	\
 	semaphore.h fcntl.h errno.h stdio.h time.h stdarg.h	\
