--- a/libc/libc.config
+++ b/libc/libc.config
@@ -57,6 +57,13 @@
   desc Reduce formater algorithm features to bare minimum
 %config end
 
+%config CONFIG_LIBC_FORMATTER_FLOAT
+  desc Provide floats support for printf related functions
+  parent CONFIG_LIBC
+  provide CONFIG_LICENSE_USE_GPL
+  suggest_when CONFIG_LIBM
+%config end
+
 %config CONFIG_LIBC_FORMATTER_HEXDUMP
   parent CONFIG_LIBC
   flags auto
